apps/applications/home/lubelogger/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lubelogger-route
  namespace: home
spec:
  parentRefs:
    - name: internal-gateway
      namespace: traefik
  hostnames:
    - "lubelogger.kerrlab.app"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: lubelogger
          port: 8080
